# BypassHiddenApi

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/muye/bypasshiddenapi/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/muye/bypasshiddenapi/: BypassHiddenApiViewModel.kt  MainActivity.kt
app/src/main/java/com/muye/bypasshiddenapi/theme/: Theme.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/muye/bypasshiddenapi/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
hiddenapi/: build.gradle.kts
hiddenapi/src/androidTest/java/com/muye/hiddenapi/: ExampleInstrumentedTest.kt
hiddenapi/src/main/cpp/: BypassByGetMemberActionImpl.cpp  BypassByJniOnLoad.cpp  BypassByMetaReflection.cpp  BypassByModifyAccessFlag.cpp  BypassByModifyEnforcementPolicy.cpp  BypassBySetHiddenApiExemptions.cpp  CMakeLists.txt
hiddenapi/src/main/java/com/muye/hook/hiddenapi/: BypassByGetMemberActionImpl.kt  BypassByJniOnLoad.kt  BypassByMetaReflection.kt  BypassByModifyAccessFlag.kt  BypassByModifyEnforcementPolicy.kt  BypassByNullClassloader.kt  BypassBySetHiddenApiExemptions.kt  BypassByUnsafeReflect.kt  BypassHiddenApi.kt  SetAllHiddenApiExemptions.java
hiddenapi/src/test/java/com/muye/hiddenapi/: ExampleUnitTest.kt
unsafe/: build.gradle.kts
